@@ -66,6 +66,7 @@
 			MA.zip for MechAssault,<br />
             SC-NTC.zip (North America) or SC-PAL.zip (Europe) for the Splinter Cell Exploit.<br />
             TH4-NTSC.zip (North America) or TH4-PAL.zip (Europe) for the Tony Hawks Pro Skater 4 Exploit.<br />
+            MetalArms-NTSC.zip (North America) or MetalArms-PAL.zip (Europe) for the Metal Arms Exploit.<br />
             <br />
             Extract the exploit to the current working directory.<br />
             If you happen to extract it to a folder of the same name just grab the folder
@@ -76,6 +77,7 @@
             UDATA\41560017<br />
             UDATA\4541000d<br />
             UDATA\5553000c<br />
+            UDATA\5655000a<br />
             <br />
             Copy the folder inside "UDATA" to the root of your memory card<br />
             (See below if you're not sure how to do this).<br />
